# people-pipeline

./: .gitignore  pyproject.toml
