[tool.poetry]
name = "people-pipeline"
version = "0.1.0"
description = ""
authors = ["Vladimir-Voronin <vladimirvoron7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
